2012-02-27  David S. Miller  <davem@davemloft.net>

	* sysdeps/ieee754/ldbl-128/s_nearbyintl.c (__nearbyintl): Do not
	manipulate bits before adding and subtracting TWO112[sx].
	* sysdeps/ieee754/ldbl-128/s_rintl.c (__rintl): Likewise.

2012-02-27  Roland McGrath  <roland@hack.frob.com>

	[BZ #13775]
	* libio/bits/stdio-ldbl.h (vdprintf, dprintf): Put these under
	[__USE_XOPEN2K8] rather than [__USE_GNU], to match the stdio.h decls.
	* libio/stdio.h (vdprintf, dprintf): Remove comment about these not
	being in POSIX, because they are in 1003.1-2008.

	* rt/tst-aio.c: Include <fcntl.h>.
	* rt/tst-aio7.c: Likewise.
	* rt/tst-aio64.c: Likewise.

	* stdio-common/tst-fmemopen.c (main): Remove spurious const.

2012-02-27  Joseph Myers  <joseph@codesourcery.com>

	* manual/install.texi (--with-headers): Describe headers as
	interface headers, not private headers.
	(Specific advice for GNU/Linux systems): Describe use of headers
	from "make headers_install", not private headers from older
	kernels.
	* INSTALL: Regenerated.
	* sysdeps/unix/sysv/linux/configure.in (LIBC_LINUX_VERSION):
	Change to 2.6.19.
	* sysdeps/unix/sysv/linux/configure: Regenerated.

	* manual/llio.texi (fclean): Remove documentation.

	* manual/Makefile (libc-texi-generated): New variable.  Include
	version.texi.
	(libc.dvi, libc.pdf, libc.info, libc/index.html): Depend on
	$(libc-texi-generated), not duplicated list of files.
	(version.texi, stamp-version): New rules.
	(realclean): Remove $(libc-texi-generated), not individual files
	from that list.  Do not remove dir-add.texinfo.
	* manual/libc.texinfo: Comment out uses of edition numbers and
	references to printed manual.  Remove last-updated dates.
	(EDITION): Comment out.
	(ISBN): Likewise.
	(VERSION, UPDATED): Remove.
	(version.texi): Include.

2012-02-27  Andreas Schwab  <schwab@linux-m68k.org>

	* sysdeps/posix/spawni.c: Include <signal.h>.
	* sysdeps/pthread/aio_cancel.c: Include <fcntl.h>.
	* sysdeps/pthread/aio_fsync.c: Likewise.
